fix(product-list): prevent cards from stretching when row is not full

--- a/src/entities/ProductList/ProductsList.module.scss
+++ b/src/entities/ProductList/ProductsList.module.scss
@@ -1,6 +1,6 @@
 .products {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(289px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(289px, 1fr));
   grid-auto-rows: 1fr;
   align-items: start;
   gap: 20px;
